external-crates/move/crates/move-compiler/tests/move_2024/typing/unbound_field_from_parsing_error.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/typing/unbound_field_from_parsing_error.move:3:11
  │
3 │         V x{: u8},
  │           ^
  │           │
  │           Unexpected 'x'
  │           Expected ',' or '}'

error[E03013]: positional call mismatch
  ┌─ tests/move_2024/typing/unbound_field_from_parsing_error.move:6:9
  │
3 │         V x{: u8},
  │         - 'V' is declared here
  ·
6 │         E::V { x: 0 }
  │         ^^^^^^^^^^^^^ Invalid variant instantiation. Empty variant declarations require empty instantiations
  │
  = Remove '{ }' arguments from this instantiation
